fix: scrollbar and content borders

--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -1,11 +1,6 @@
 .mat-container {
   width: 100%;
-  height: 100%;
   background-color: greenyellow;
-}
-
-.mat-sidenav-content {
-  display: flex;
 }
 
 .mat-sidenav {
