--- a/myapp/src/styles.scss
+++ b/myapp/src/styles.scss
@@ -49,7 +49,7 @@ img {
   color: white;
   padding: 1rem;
   margin: 1rem 0;
-  width: 50%;
+  width: 100%;
 }
 
 button {
